# svg-present

./: .gitignore  Makefile  README.md  flake.nix  license  mk_pdf  pyproject.toml  readme.md
contrib/: PKGBUILD
examples/: make_example.sh  make_examples.sh  readme.md
examples/01 basic/: make_example.sh
examples/02 multiple files/: make_example.sh
src/svg_present/: __init__.py  args.py
